Time: 0 ms (100.00%), Space: 43 MB (7.79%) - LeetHub