@@ -1,5 +1,5 @@
 class Solution {
-    private List<List<Integer>> res;
+    List<List<Integer>> res;
     public List<List<Integer>> subsets(int[] nums) {
         this.res = new ArrayList<>();
         helper(nums, 0, new ArrayList<>());
@@ -7,15 +7,19 @@ class Solution {
     }
     
     private void helper(int[] nums, int pivot, List<Integer> path) {
+        //no base as recursion will stop at last index. For loop will take care of it.
+        
+        
         //logic
-        res.add(new ArrayList<>(path));
-        for(int i=pivot; i<nums.length; i++) {
+        res.add(new ArrayList<>(path)); //add at every node. Not just at the leaf
+        for(int i = pivot; i < nums.length; i++) {
             //action
             path.add(nums[i]);
+            //recurse
             helper(nums, i+1, path);
-            
             //backtrack
-            path.remove(path.size()-1);
+            path.removeLast();
         }
+        
     }
 }
